2008-09-08  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: bump gtk-vnc dependency to 0.3.7
	* src/vinagre-tab.c: Removed ugly hacks related to key press. New
	gtk-vnc handles this correctly.

2008-09-01  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.92

==================== 2.23.91 =====================

2008-08-22  Halton Huo <halton.huo@sun.com>

	* configure.ac: Add libsocket to LDFLAGS, closes #548585

2008-08-18  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.91

==================== 2.23.90 =====================

2008-08-18  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: Requires gtk+ >= 2.13.1, glib >= 2.17.0
	* src/vinagre-utils.c: Uses new gtk+ functions instead of gnome-open.
	Closes #514064.

2008-07-26  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	Bug 544736 – Use single GTK+ includes

	* src/gossip-cell-renderer-expander.c:
	* src/gossip-cell-renderer-expander.h:
	* src/vinagre-app.c:
	* src/vinagre-app.h:
	* src/vinagre-applet.c:
	* src/vinagre-bacon.c:
	* src/vinagre-bacon.h:
	* src/vinagre-bookmarks.c:
	* src/vinagre-bookmarks.h:
	* src/vinagre-commands.c:
	* src/vinagre-commands.h:
	* src/vinagre-connect.c:
	* src/vinagre-connection.c:
	* src/vinagre-connection.h:
	* src/vinagre-fav.c:
	* src/vinagre-main.c:
	* src/vinagre-mdns.h:
	* src/vinagre-notebook.c:
	* src/vinagre-notebook.h:
	* src/vinagre-prefs.c:
	* src/vinagre-prefs.h:
	* src/vinagre-tab.c:
	* src/vinagre-tab.h:
	* src/vinagre-ui.h:
	* src/vinagre-utils.c:
	* src/vinagre-utils.h:
	* src/vinagre-window-private.h:
	* src/vinagre-window.c:
	* src/vinagre-window.h:

	Use single <gtk/gtk.h> includes. Also fixed malformed
	Vim modelines.

2008-06-16  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.23.5

==================== 2.23.4 =====================

2008-06-13  Jonh Wendell <jwendell@gnome.org>

	* Added a panel applet.

2008-06-02  Jonh Wendell <jwendell@gnome.org>
