@@ -1,5 +1,9 @@
 2008-09-08  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-tab.c: Fixed bug #533282 - Support for downscaling.
+
+2008-09-08  Jonh Wendell <jwendell@gnome.org>
+
 	* configure.ac: bump gtk-vnc dependency to 0.3.7
 	* src/vinagre-tab.c: Removed ugly hacks related to key press. New
 	gtk-vnc handles this correctly.
